@@ -1,3 +1,6 @@
+2019-10-26 DJ Lucas <dj@linuxfromscratch.org>
+   * Add nftables service.
+
 2019-10-15 Douglas R. Reno <renodr@linuxfromscratch.org>
    * Remove the PIDFile argument from httpd as it is no longer needed.
    * Remove git-daemon service since we no longer support it.
